--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  padding: 50px;
-  text-align: center;
+background: #1D2829;
+background: linear-gradient(90deg, rgba(29, 40, 41, 1) 0%, rgba(51, 148, 164, 1) 11%, rgba(149, 46, 201, 1) 41%, rgba(159, 30, 37, 1) 58%, rgba(105, 190, 53, 1) 85%, rgba(29, 40, 41, 1) 100%);
 }
 
-h1 {
-  color: #333;
-}
 
-p {
-  font-size: 18px;
-}
