--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
-body {
-background: #1D2829;
-background: linear-gradient(90deg, rgba(29, 40, 41, 1) 0%, rgba(51, 148, 164, 1) 11%, rgba(149, 46, 201, 1) 41%, rgba(159, 30, 37, 1) 58%, rgba(105, 190, 53, 1) 85%, rgba(29, 40, 41, 1) 100%);
+body{
+    background: rgb(29,40,41);
+    background: -moz-linear-gradient(90deg, rgba(29,40,41,1) 0%, rgba(24,30,31,1) 11%, rgba(19,19,20,1) 41%, rgba(19,19,20,1) 58%, rgba(24,30,31,1) 85%, rgba(29,40,41,1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(29,40,41,1) 0%, rgba(24,30,31,1) 11%, rgba(19,19,20,1) 41%, rgba(19,19,20,1) 58%, rgba(24,30,31,1) 85%, rgba(29,40,41,1) 100%);
+    background: linear-gradient(90deg, rgba(29,40,41,1) 0%, rgba(24,30,31,1) 11%, rgba(19,19,20,1) 41%, rgba(19,19,20,1) 58%, rgba(24,30,31,1) 85%, rgba(29,40,41,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1d2829",endColorstr="#1d2829",GradientType=1);
+    color: white;
+    padding:3rem;
+    position: relative;
 }
 
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
+}
