--- a/style.css
+++ b/style.css
@@ -43,3 +43,42 @@ header {
 .contact-btn:hover {
     background-color: #76b0ab37;
 }
+
+main {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 85.7vh;
+}
+
+.title-section {
+    margin-top: 3rem;
+}
+
+main h1 {
+    text-align: center;
+    font-size: 9rem;
+    font-weight: 900;
+    letter-spacing: 5px;
+    line-height: 1;
+    background-image: linear-gradient(rgb(133, 133, 133), rgb(255, 255, 255));
+    color: transparent;
+    background-clip: text;
+}
+
+.location {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.location p {
+    background-image: linear-gradient(to right, #76b0ab, #ffffff, #842626);
+    color: transparent;
+    background-clip: text;
+    font-size: 1.5rem;
+}
