--- a/style.css
+++ b/style.css
@@ -159,3 +159,76 @@ main h1 {
   display: block;
 }
 
+
+.about-section {
+    height: 95vh;
+    width: 100%;
+    margin-top: 20rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-title {
+    margin-bottom: 5%;
+    font-size: 5rem;
+    background-image: linear-gradient(rgb(133, 133, 133), rgb(255, 255, 255));
+    color: transparent;
+    background-clip: text;
+}
+
+.bento-grid {
+    position: relative;
+    display: grid;
+    height: 90vh;
+    width: 90%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 
+        "intro intro tech"
+        "time passion tech"
+    ;
+    gap: 1.5rem;
+}
+
+.card {
+    background: linear-gradient(145deg, rgba(0, 0, 0, 0.14), rgba(0, 0, 0, 0.07));
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 24PX;
+    padding: 2rem;
+    transition: transform 0.3s ease,
+                border-color 0.3s ease,
+                box-shadow 0.3s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+/* Card location */
+
+    .intro { grid-area: intro; min-height: 300px;}
+    .tech {grid-area: tech; min-height: 450px;}
+    .time { grid-area: time; min-height: 220px;}
+    .passion { grid-area: passion; min-height: 220px;}
+
+    .card:hover {
+    border-color: transparent;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    transform: translateY(-5px);}
+
+    /* SPOTLIGHT */
+.card::before {
+    content: '';
+    position: absolute;
+    inset: 0 0 0 0;
+    background: radial-gradient(circle at var(--x) var(--y),
+                rgba(124, 233, 230, 0.1),
+                transparent 40%
+            );
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: -1;
+}
+
+.card:hover::before {
+    opacity: 1;
+}
