--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ main h1 {
 }
 
 .card-text {
-    color: #7b7b7b;
+    color: #ececec;
     line-height: 1.6;
     margin-top: 2rem;
     margin-bottom: 2rem;
