--- a/style.css
+++ b/style.css
@@ -257,11 +257,38 @@ main h1 {
     z-index: -1;
 }
 
+.model-box {
+    position: absolute;
+    right: 5%;
+    top: -35%;
+    width: 30rem;
+    height: 30rem;
+}
+
 .bento-grid .skills-group {
     position: absolute;
     bottom: 5%;
     left: 15%;
     width: 70%;}
+
+    .bento-grid .btn {
+    position: absolute;
+    bottom: 10%;
+    padding: 0.75rem 1.5rem;
+    background-color: rgba(124, 233, 230, 0.1);
+    color: #ededed;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.bento-grid .btn:hover {
+    background-color: #16ead9;
+    color: black;
+}
+
+    
 
 
 
@@ -274,3 +301,6 @@ main h1 {
   color: #ffffff;
   text-decoration: underline;
 }
+
+
+
