--- a/style.css
+++ b/style.css
@@ -376,3 +376,14 @@ main h1 {
     filter: grayscale(0);
     scale: 1.2;
 }
+
+
+.footer {
+  text-align: center;
+  padding: 2rem 1rem;
+  background-color: #111;
+  color: #ccc;
+  font-size: 0.9rem;
+  margin-top: 4rem;
+  border-top: 1px solid #444;
+}
